--- a/passenger counter/index.html
+++ b/passenger counter/index.html
@@ -9,5 +9,6 @@
 
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
+        <p id="save-el">Previous entries</p>
     </body>
 </html>
